[workspace]
resolver = "2"

members = [
    "amdgpu-drm-sys",
    "amdsmi",
    "amdsmi-sys",
    "hip",
    "hip-sys",
    "hsa",
    "hsa-sys",
    "hsakmt-rs",
    "hsakmt-sys",
    "opencl",
    "opencl-collections",
    "opencl-collections-examples",
    "opencl-examples",
    "opencl-sys",
    "opencl-node",
    "utilities",
]

#[profile.dev]
#debug-assertions = false
